--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -10,7 +10,11 @@
       </ul>
     </div>
   <% end %>
-
+  <div class="form-group">
+    <%= f.label :name, "Goal:", {class: "col-sm-2 control-label"} %>
+    <%= f.text_field :name, {class: "col-sm-10"} %>
+  </div>
+  
   <div class="actions">
     <%= f.submit %>
   </div>
