--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -10,10 +10,19 @@
       </ul>
     </div>
   <% end %>
+  
   <div class="form-group">
     <%= f.label :name, "Goal:", {class: "col-sm-2 control-label"} %>
     <%= f.text_field :name, {class: "col-sm-10"} %>
   </div>
+  
+  <div class="form-group">
+    <%= f.label :description, "Description:", {class: "col-sm-2 control-label"} %>
+    <%= f.text_area :description, {class: "col-sm-10"} %>
+  </div>
+  
+  <%= f.label :due_date, "Due:", {class: "col-sm-2 control-label"} %>
+  <%= f.date_field(:due_date) %>
   
   <div class="actions">
     <%= f.submit %>
