--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -11,11 +11,11 @@
 
   <tbody>
     <% @goals.each do |goal| %>
-      <tr>
-        <td><%= link_to 'Show', goal %></td>
-        <td><%= link_to 'Edit', edit_goal_path(goal) %></td>
-        <td><%= link_to 'Destroy', goal, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <h3><%= goal.name %></h3>
+      
+        <%= link_to 'Show', goal %>
+        <%= link_to 'Edit', edit_goal_path(goal) %>
+        <%= link_to 'Destroy', goal, method: :delete, data: { confirm: 'Are you sure?' } %>
     <% end %>
   </tbody>
 </table>
