--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -21,6 +21,11 @@
     <%= f.text_area :description, {class: "col-sm-10"} %>
   </div>
   
+  <div class="form-group">
+    <%= f.label :status, "Status:", {class: "col-sm-2 control-label"} %>
+    <%= f.select :status, ["Created", "In-Progress", "Done", "On-Hold"], {class: "col-sm-10"} %>
+  </div>
+  
   <%= f.label :due_date, "Due:", {class: "col-sm-2 control-label"} %>
   <%= f.date_field(:due_date) %>
   
