--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -21,6 +21,15 @@
     <%= f.text_area :description, {class: "col-sm-10"} %>
   </div>
   
+  <h1>HI</h1>
+  
+  <div class="form-group">
+    <%= f.fields_for :subtasks do |subtask| %>
+      <%= subtask.label :name, "Name:" %>
+      <%= subtask.text_field :name %>
+    <% end %>
+  </div>
+
   <div class="form-group">
     <%= f.label :status, "Status:", {class: "col-sm-2 control-label"} %>
     <%= f.select :status, ["Created", "In-Progress", "Done", "On-Hold"], {class: "col-sm-10"} %>
